# CadenceThrow

./: .gitignore  CMakeLists.txt  Danny Burke  README  README.md  TODO
cmake/: FindAllegro5Video.cmake
data/: 1.avi  CMakeLists.txt  crash.flac  fail.avi  fail.flac  intro.avi  intro.flac  lost.flac  prepare.avi  prepare.flac  success.flac  throw.avi  throw.flac  win.flac
data/icons/: CMakeLists.txt  icon.rc
lib/: README.txt
src/: CMakeLists.txt  Makefile  config.c  main.c  main.h
src/gamestates/: about.c  intro.c  intro.h  level.c  level.h  loading.c  menu.c  pause.c
